--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 
 <body class="overflow-hidden">
     <!--=== pre-loader ==-->
-    <div id="preloder"
-        class="animation min-vh-100 w-100 bg-black position-fixed d-flex flex-column align-items-center justify-content-center z-index-3 duration_300 cursor-pointer">
+    <div id="preloder" class="animation min-vh-100 w-100 bg-black position-fixed d-flex flex-column align-items-center justify-content-center z-index-4    
+         duration_300 cursor-pointer">
         <img src="./assets/images/png/logo.png" alt="logo">
     </div>
     <header>
@@ -34,25 +34,24 @@
                             <li class="d-block  d-lg-none pt-lg-0 pt-5">
                                 <img src="./assets/images/png/logo.png" alt="logo">
                             </li>
-                            <li class="pt-3 border1 pt-lg-0 "><a href="#home" onclick="openNav()"
+                            <li class="pt-3 border1 pt-lg-0 "><a href="" onclick="openNav()"
                                     class="list-unstyled text-decoration-none  fs-16 fw-normal bs-offwhite lh-150 ff-montserrsat nav-line position-relative ">Home</a>
                             </li>
-                            <li class="pt-3 border1 pt-lg-0"><a href="#footer" onclick="openNav()"
+                            <li class="pt-3 border1 pt-lg-0"><a href="" onclick="openNav()"
                                     class="list-unstyled text-decoration-none fs-16 fw-normal bs-offwhite lh-150 ff-montserrsat nav-line position-relative ">About</a>
                             </li>
-                            <li class="pt-3 border2 pt-lg-0"><a href="#service" onclick="openNav()"
-                                    class="list-unstyled text-decoration-none fs-16 fw-normal bs-offwhite lh-150 ff-montserrsat position-relative ">Services</a>
+                            <li class="pt-3 border2 pt-lg-0"><a href="" onclick="openNav()"
+                                    class="list-unstyled text-decoration-none fs-16 fw-normal bs-offwhite lh-150 ff-montserrsat nav-line position-relative ">Services</a>
                             </li>
-                            <li class="pt-3 border3 pt-lg-0"><a href="#pricing" onclick="openNav()"
+                            <li class="pt-3 border3 pt-lg-0"><a href="" onclick="openNav()"
                                     class="list-unstyled text-decoration-none fs-16 fw-normal bs-offwhite lh-150 ff-montserrsat nav-line position-relative">Pricing</a>
                             </li>
-                            <li class="pt-3 border4 pt-lg-0"><a href="#accordian" onclick="openNav()"
+                            <li class="pt-3 border4 pt-lg-0"><a href="" onclick="openNav()"
                                     class="list-unstyled text-decoration-none fs-16 fw-normal bs-offwhite lh-150 ff-montserrsat nav-line position-relative ">FAQ</a>
                             </li>
                             <li class="pt-3 pt-lg-0"><button
                                     class="ml-lg-89 ml-0 login-btn bs-offwhite ff-montserrsat fs-16 fw-semibold">Login</button>
                             </li>
-
                         </ul>
                         <div id="menubtn-icon" onclick="openNav()" class="  pe-3 pt-1 position-relative z-index-4">
                             <div class="line1"></div>
@@ -64,7 +63,7 @@
             </div>
         </nav>
         <section
-            class="bg-img min-vh-100 d-flex align-items-center justify-content-center flex-column position-relative overflow-hidden">
+            class="bg-darkblack min-vh-100 d-flex align-items-center justify-content-center flex-column position-relative overflow-hidden">
             <div class="my-container ">
                 <div class="d-flex align-items-center justify-content-center flex-column">
                     <p class="bs-white ff-montserrsat fs-62 fw-semibold text-center max-width-802">Our Agency Brings
@@ -83,19 +82,35 @@
                 </div>
             </div>
             <div class="ellipse1">
-                <img src="./assets/images/png/elli1.png" alt="elli1" class="w-lg-50">
-
+                <img src="./assets/images/png/elli1.png" alt="elli1" class="d-none d-xl-block">
+                <img src="./assets/images/png/black-img.png" alt="black" class="d-block d-xl-none
+                ">
             </div>
             <div class="orange-img">
                 <img src="./assets/images/png/orange-img.png" alt="orange-img" class="w-lg-50">
             </div>
             <div class="yellow-img">
-                <img src="./assets/images/png/yellow-img.png" alt="yellow-img" class="d-none d-lg-block">
-                <img src="./assets/images/png/small-yellow-img.png" alt="yellow-img" class="d-block d-lg-none">
+                <img src="./assets/images/png/yellow-img.png" alt="yellow-img" class="d-none d-xl-block">
+                <img src="./assets/images/png/small-yellow-img.png" alt="yellow-img" class="d-block d-xl-none">
             </div>
             <div class="green-img">
                 <img src="./assets/images/png/greem-img.png" alt="green-img" class="d-none d-lg-block">
                 <img src="./assets/images/png/small-triangle.png" alt="small-triangle" class="d-block d-lg-none">
+            </div>
+            <div class="header-ellipse">
+                <img src="./assets/images/png/header-ellipse.png" alt="header-ellipse">
+            </div>
+            <div class="final-version d-none d-lg-block">
+                <img src="./assets/images/png/final-version.png" alt="final-version">
+            </div>
+            <div class="final-version2 d-none d-lg-block">
+                <img src="./assets/images/png/final-version-2.png" alt="final-version-2">
+            </div>
+            <div class="final-version3 d-none d-lg-block">
+                <img src="./assets/images/png/final-version-3.png" alt="3">
+            </div>
+            <div class="final-version4 d-none d-lg-block">
+                <img src="./assets/images/png/final-version-4.png" alt="4">
             </div>
         </section>
     </header>
@@ -117,20 +132,20 @@
     <section class="overflow-hidden py-5 position-relative">
         <div class="pb-5">
             <p class="bs-black ff-montserrsat fs-42 fw-semibold text-center pt-4">Relevant Works</p>
-            <p class="text-center ff-montserrsat fw-normal fs-16 opacity-0-9 max-width-697 mx-auto pb-5">Our team has
+            <p class="text-center ff-montserrsat fw-normal fs-16 opacity-0-9 max-width-697 mx-auto mb-0">Our team has
                 successfully collaborated
                 with a diverse range of clients across various industries,
                 providing innovative
                 solutions that address their unique challenges.</p>
             <div class="slider3">
                 <div class="mx-4 px-xl-3 px-0 pl-md-0">
-                    <img src="./assets/images/png/sliderimg3.png" alt="img3" class="w-100 mb-5">
+                    <img src="./assets/images/png/sliderimg3.png" alt="img3" class="w-100 mb-5 pt-5">
                 </div>
                 <div class="mx-4 px-xl-3 px-0 pl-md-0">
-                    <img src="./assets/images/png/sliderimg2.png" alt="img1" class="w-100 mb-5">
+                    <img src="./assets/images/png/sliderimg2.png" alt="img1" class="w-100 mb-5 pt-5">
                 </div>
                 <div class="mx-4 px-xl-3 px-0 pl-md-0">
-                    <img src="./assets/images/png/sliderimg1.png" alt="img2" class="w-100 mb-5">
+                    <img src="./assets/images/png/sliderimg1.png" alt="img2" class="w-100 mb-5 pt-5">
                 </div>
             </div>
             <div class="d-flex justify-content-center mt-4">
@@ -145,6 +160,13 @@
         </div>
         <div class="triangle-img2 d-none d-lg-blocks">
             <img src="./assets/images/png/half-triangle.png" alt="half-triangle">
+        </div>
+        <div class="dots-ellipse">
+            <img src="./assets/images/png/dots2.png" alt="dots">
+        </div>
+        <div class="big-triangle">
+            <img src="./assets/images/png/big-triangle.png" alt="big-triangle" class="d-none d-lg-block">
+            <img src="./assets/images/png/small-big-triangle.png" alt="small-big-triangle" class="d-block d-lg-none">
         </div>
     </section>
     <!-- ====================section4============================ -->
@@ -483,6 +505,9 @@
             <div class="pos-abs1 d-none d-lg-block">
                 <img src="./assets/images/png/ellipse2.png" alt="2">
             </div>
+            <div class="sec-ellipse d-none d-lg-block">
+                <img src="./assets/images/png/5-sec-ellipse.png" alt="5-sec-ellipse.png">
+            </div>
         </div>
     </section>
     <!-- ====================section7============================ -->
@@ -495,7 +520,7 @@
             <div class="slider-card">
                 <div class="row">
                     <div class="col-3">
-                        <img src="./assets/images/png/slider-girl1.png" alt="1">
+                        <img src="./assets/images/png/slider-girl1.png" alt="1" class="w-100">
                     </div>
                     <div class="col-lg-9 pl-44">
                         <h2 class="ff-montserrsat bs-black fw-semibold fs-sm pt-2 mb-0">Arlene McCoy</h2>
@@ -513,7 +538,7 @@
             <div class="slider-card">
                 <div class="row">
                     <div class="col-3">
-                        <img src="./assets/images/png/slider-girl-3.png" alt="3">
+                        <img src="./assets/images/png/slider-girl-3.png" alt="3" class="w-100">
                     </div>
                     <div class="col-lg-9 pl-44">
                         <h2 class="ff-Montserrat color-lightblack fw-semibold fs-sm pt-2 mb-0">Arlene McCoy</h2>
@@ -531,7 +556,7 @@
             <div class="slider-card">
                 <div class="row">
                     <div class="col-3">
-                        <img src="./assets/images/png/slider-girl1.png" alt="1">
+                        <img src="./assets/images/png/slider-girl1.png" alt="1" class="w-100">
                     </div>
                     <div class="col-lg-9 pl-44">
                         <h2 class="ff-Montserrat color-lightblack fw-semibold fs-sm pt-2 mb-0">Arlene McCoy</h2>
@@ -549,7 +574,7 @@
             <div class="slider-card">
                 <div class="row">
                     <div class="col-3">
-                    <img src="./assets/images/png/slider-girl-3.png" alt="3">
+                        <img src="./assets/images/png/slider-girl-3.png" alt="3" class="w-100">
                     </div>
                     <div class="col-lg-9 pl-44">
                         <h2 class="ff-Montserrat color-lightblack fw-semibold fs-sm pt-2 mb-0">Arlene McCoy</h2>
@@ -703,11 +728,16 @@
                 </div>
             </div>
         </div>
-        <div class="pos-abs4 d-none d-lg-block">
-            <img src="./assets/images/png/blue-img.png" alt="blue-img">
+        <div class="pos-abs4">
+            <img src="./assets/images/png/blue-img.png" alt="blue-img" class="d-none d-lg-block">
+            <img src="./assets/images/png/small-blue.png" alt="small-blue" class="d-block d-lg-none">
         </div>
-        <div class="pos-abs5 d-none d-lg-block">
-            <img src="./assets/images/png/version3.png" alt="3">
+        <div class="pos-abs5">
+            <img src="./assets/images/png/version3.png" alt="3" class="d-none d-lg-block">
+            <img src="./assets/images/png/small-half-triangle.png" alt="small-half-triangle" class="d-block d-lg-none">
+        </div>
+        <div class="scribble-img">
+            <img src="./assets/images/png/scribble-final-version.png" alt="scribble-final-version">
         </div>
     </section>
     <!-- ====================footer=============================-->
@@ -824,24 +854,30 @@
             speed: 300,
             slidesToShow: 1,
             slidesToScroll: 1,
-            dots: true,
             centerMode: true,
             focusOnSelect: true,
+            centerPadding: '300px',
             responsive: [
                 {
-                    breakpoint: 1024,
+                    breakpoint: 1100,
+                    settings: {
+                        slidesToShow: 2,
+                        slidesToScroll: 1,
+                        infinite: true,
+                        dots: true,
+                        centerPadding: 0,
+                        speed: 500,
+                    }
+                },
+                {
+                    breakpoint: 750,
                     settings: {
                         slidesToShow: 1,
                         slidesToScroll: 1,
                         infinite: true,
-                        dots: true
-                    }
-                },
-                {
-                    breakpoint: 600,
-                    settings: {
-                        slidesToShow: 1,
-                        slidesToScroll: 1
+                        dots: true,
+                        centerPadding: 0,
+                        speed: 500,
                     }
                 },
                 {
